@@ -1,5 +1,5 @@
 {
-	"creator": "Satellites plugin version 0.7.1 (updated)",
+	"creator": "Satellites plugin version 0.7.2 (updated)",
 	"hintColor": [0.4, 0.4, 0.4],
 	"satellites": 
 	{
